change font again

--- a/styles/customDrawer.module.css
+++ b/styles/customDrawer.module.css
@@ -7,6 +7,7 @@
 .banner{
   font-weight: 500;
   font-size: 30px;
+  font-family: Nunito Sans;
   line-height: 41px;
   color: #FFFFFF;
   cursor: pointer;
@@ -36,6 +37,7 @@
 .lists div p{
   font-size: 14px;
   text-align: center;
+  font-family: Nunito Sans;
   color: #663399;
   margin: 10px 0 0 0;
 }
