--- a/styles/dashboardCard.module.css
+++ b/styles/dashboardCard.module.css
@@ -28,6 +28,7 @@
     color: #43454D;
     margin: 5px 0;
     font-weight: 400;
+    font-family: Nunito Sans;
 }
 .cardText span {
     font-family: Nunito Sans;
