--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Nunito Sans;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Nunito Sans, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
